--- a/app/src/main/res/raw/index.html
+++ b/app/src/main/res/raw/index.html
@@ -160,6 +160,7 @@ width: 1170px;
 }
 }
 
+
 header {
 position: relative;
 padding: 30px 0;
@@ -237,6 +238,25 @@ vertical-align: bottom;
 border-bottom: 2px solid #ddd;
 }
 
+.stream {
+background-color: #f5f5f5;
+
+background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#ffffff));
+background-image: -webkit-linear-gradient(top,#f5f5f5 0,#ffffff 100%);
+background-image: -o-linear-gradient(top,#f5f5f5 0,#ffffff 100%);
+background-image: linear-gradient(to bottom,#f5f5f5 0,#ffffff 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#49708f', endColorstr='#ffffff',
+GradientType=0);
+background-repeat: repeat-x;
+padding: 30px 0;
+text-align: center;
+}
+.stream__image {
+display: inline-block;
+margin:0 auto;
+border:1px solid #cacfd2;
+}
+
 </style>
 </head>
 <body>
@@ -247,6 +267,9 @@ border-bottom: 2px solid #ddd;
         <p>Android Remote Control</p>
     </div>
 </header>
+<div class="stream">
+    <div class="container"><img class="stream__image" src="/stream" alt="Видео"></div>
+</div>
 <div class="container">
     <h2>Перемещение автомобиля с помощью клавиатуры</h2>
 
@@ -397,6 +420,7 @@ border-bottom: 2px solid #ddd;
             document.addEventListener("keydown", keypress);
             document.addEventListener("keyup", keypress);
         })();
+
 
 </script>
 </body>
